# spconv_lite

./: .gitignore  CMakeLists.txt  README.md  setup.py
components/cuhash/: CMakeLists.txt
components/spconv_cpp/: CMakeLists.txt
components/spconv_cpp/include/spconv_cpp/: geometry.h  indice.cuh  indice.h  maxpool.cuh  maxpool.h  pool_ops.h  reordering.cuh  reordering.h  spconv_ops.h
components/spconv_cpp/src/: all.cpp  indice.cpp  indice.cu  maxpool.cpp  maxpool.cu  pool_ops.cpp  reordering.cpp  reordering.cu  spconv_ops.cpp
components/spconv_utils/: CMakeLists.txt
components/spconv_utils/include/spconv_utils/: box_iou.h  nms.cuh  nms_ops.h  point2voxel.h
components/spconv_utils/src/: all.cpp  box_iou.cpp  nms.cu  nms_ops.cpp  point2voxel.cpp
components/tensorview/include/tensorview/: tensor.h  tensorview.h  torch_utils.h
docker/: build_spconv_lite.Dockerfile  dev_spconv_lite.Dockerfile
spconv_lite/: __init__.py  conv.py  functional.py  modules.py  ops.py  pool.py  sparse_tensor.py
spconv_lite/utils/: __init__.py  point2voxel.py
unittest/test/: cases.py  fake_train.py  test_all.py  test_multi_trials.py  test_timeit.py  utils.py
